查询和查询经验功能合并，返回图片结果。指令权限校验bug修复。